[tool.poetry]
name = "actp"
version = "3.8.0.2051"
description = "Actant's Act protocol package"
authors = ["support <support@actant.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
protobuf = "^4.21.1"
types-protobuf = "^3.19.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
